src/test/ui/typeck/typeck-auto-trait-no-supertraits.stderr
error[E0568]: auto traits cannot have super traits
  --> $DIR/typeck-auto-trait-no-supertraits.rs:27:1
   |
LL | auto trait Magic: Copy {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

